<resources>
    <string name="app_name">PhuotPhuotPhuot</string>
    <string name="facebook_app_id">277347119372563</string>

    <!--activity intro-->
    <string name="act_intro_btn_previos">Previous</string>
    <string name="act_intro_btn_next">Next</string>
    <string name="act_intro_btn_lets_go">Lets go</string>


    <!--drawer title-->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--act_regions-->
    <string name="act_regions_search_hint">Search</string>

    <!--title menu -->
    <string name="menu_vietnam">VietNam</string>
    <string name="menu_search">Voice Search</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_north">North</string>
    <string name="menu_central">Central</string>
    <string name="menu_south">South</string>
    <string name="menu_flashlight">FlashLight</string>
    <string name="menu_compass">Compass</string>
    <string name="menu_experience">Experience</string>
    <string name="menu_sos">SOS</string>
    <string name="menu_utilities">Utilities</string>
    <string name="menu_information">Infomation</string>
    <string name="menu_update">Update</string>

    <string name="menu_list_or_grid">List Or Grid</string>
    <string name="menu_settings_dots">Setting</string>

    <string name="menu_setting">Setting</string>
    <string name="menu_like_on_facebook">Like ok facebook</string>
    <string name="menu_share">Share</string>
    <string name="menu_report">Report</string>


    <!--bottombar menu-->
    <string name="menu_place_intro">Intro</string>
    <string name="menu_place_map">Map</string>
    <string name="menu_place_food">Food</string>
    <string name="menu_place_motel">Motel</string>

    <!--dialog title-->
    <string name="title_dialog_choose_city">Choose city</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_dialog_unfortunately">Unfortunately</string>
    <string name="title_dialog_speech_to_text">Speech</string>

    <string name="toast_not_support_speech">Sorry, your device does not support speech to text :(</string>


    <!--title fragment activity-->
    <string name="title_activity_experience">Experience Travel</string>
    <string name="title_fragment_about">About</string>
    <string name="title_fragment_update">Update</string>

    <!--msg-->
    <string name="msg_flash">Sorry, your device does not support flash :(</string>
    <string name="msg_permission_map">Require permission , you can goto setting to set permission !</string>
    <string name="msg_permission_fine_location">Require permission FINE LOCATION for show Button location to find current position of device !</string>


    <string name="view_more">View more</string>
    <string name="press_exit">Press again to exit</string>
    <string name="title_fragment_report">Report</string>

    <!--setting-->
    <string name="setting_title">Setting</string>
    <string name="setting_language">Language</string>
    <string name="setting_language_content">Language changed after you restart app</string>

</resources>
